--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
   qrcode_reader: ^0.4.4
+  barcode_scan: ^0.0.4
 
 dev_dependencies:
   flutter_test:
