--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,9 +25,12 @@ dependencies:
   cupertino_icons: ^0.1.2
   qrcode_reader: ^0.4.4
   qr_flutter: ^2.0.0+51
+  http: ^0.12.0+1
+  
 dev_dependencies:
   flutter_test:
     sdk: flutter
+
 
 
 # For information on the generic Dart part of this file, see the
