--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,10 +23,13 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
-  qrcode_reader: ^0.4.4
+  qrcode_reader:
+    git:
+      url: https://github.com/bcko/flutter_qrcode_reader.git
+      ref: android_fix
   qr_flutter: ^2.0.0+51
   http: ^0.12.0+1
-  
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
